--- a/frontend/style.css
+++ b/frontend/style.css
@@ -118,28 +118,45 @@ input[type="text"], input[type="password"] {
     cursor: pointer;
     transition: background 0.3s;
 }
+#animal-list {
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 20px;
+  overflow-x: hidden;
+  
+ 
+}
+
+.carrossel-container {
+  width: 100%;
+}
+
 .galeria {
   display: flex;
-  flex-wrap: wrap;
   gap: 20px;
+  padding-bottom: 10px;
+  overflow-x: auto;
+  
 }
 
 .animal {
+  flex: 0 0 auto;
   display: flex;
   flex-direction: row;
   align-items: flex-start;
   border: 1px solid #ccc;
   padding: 10px;
-  width: 500px;
+  width: 400px;
   background-color: #f9f9f9;
   border-radius: 8px;
 }
 
 .animal img {
-  width: 150px;
+  width: 120px;
   height: auto;
   border-radius: 8px;
   margin-right: 15px;
+  object-fit: cover;
 }
 
 .animal-info {
@@ -149,6 +166,7 @@ input[type="text"], input[type="password"] {
 }
 
 .animal-info h3 {
+  margin: 0 0 10px 0;
   font-size: 1.2em;
   color: #333;
   display: flex;
@@ -156,12 +174,10 @@ input[type="text"], input[type="password"] {
   gap: 6px;
 }
 
-
 .animal-info p {
   margin: 0;
   font-size: 1em;
   color: #666;
 }
-
 
 
