--- a/frontend/style.css
+++ b/frontend/style.css
@@ -67,7 +67,7 @@ section {
 }
 
 button {
-    background: #ff91a4;
+    background: #78A49B;
     color: white;
     border: none;
     padding: 0.6rem 1.2rem;
@@ -77,7 +77,7 @@ button {
 }
 
 button:hover {
-    background: #ffb3c1;
+    background: #8B5126;
 }
 
 footer {
