--- a/frontend/style.css
+++ b/frontend/style.css
@@ -7,7 +7,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  background-color: #f9f9f9;
+  background-color: #efeaea;
   font-family: Arial, sans-serif;
 }
 
@@ -21,7 +21,7 @@ main {
 }
 
 footer {
-  background-color: #f2f2f2;
+  background-color: rgb(147, 127, 121);
   text-align: center;
   padding: 15px;
   color: #333;
@@ -81,7 +81,7 @@ button:hover {
 }
 
 footer {
-    background-color: #f2f2f2;
+  background-color: #a68a8a;
   text-align: center;
   padding: 15px;
   color: #333;
